# AstroTool

./: Makefile  README.md  environment.yml  pyproject.toml
astro_tool/: Fvar_list2.csv  __init__.py  config.py  dataset.py  features.py  main.py  parameters_overview.csv  plots.py
astro_tool/modeling/: predict.py  train.py
astro_tool/scripts/: base.py  evaluate.py  process.py  process_old.py  test.py
astro_tool/scripts/load_data/: asassn_scrapper.py  load_existing.py  load_single.py
models/: synthetic_base.py  visualize_base.ipynb
notebooks/: LombScargle.ipynb  compare_normalisation.ipynb  lightcurve_gap.ipynb
notebooks/data/: analyse_cuts_test1_no_norm.csv  analyse_cuts_test1_norm.csv
references/: name_id.csv
