[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "astro_tool"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Amon" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["astro_tool"]
include = ["pyproject.toml", "astro_tool/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["astro_tool"]
force-sort-within-sections = true

